docs(plan): push tasks 3-4 to CI and hand JDK 25 install to the user
Round 4 (fresh) found tasks 3 and 4 committed without pushing, so CI
never saw the spike or the schema; both now push to the draft PR and
watch the checks. Adds a BLOCKED fallback for Spotless on JDK 25, skips
spotless:check in the -Werror demo, and drops the unused
testcontainers-junit-jupiter dependency.

Step 0 now states that the user installs JDK 25 themselves.

Co-Authored-By: Claude Opus 5 <noreply@anthropic.com>